--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.4.3",
-    "@reach/router": "^1.3.1",
+    "@reach/router": "^1.3.4",
     "@svgr/webpack": "4.1.0",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
-    "@types/reach__router": "^1.3.0",
-    "@types/react": "16.8.22",
+    "@types/reach__router": "^1.3.5",
+    "@types/react": "^16.9.41",
     "@types/react-dom": "16.8.4",
     "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "1.6.0",
@@ -19,7 +19,7 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
-    "babel-preset-react-app": "^9.0.0",
+    "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
@@ -43,7 +43,7 @@
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
     "mini-css-extract-plugin": "0.5.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -51,10 +51,10 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.8.6",
+    "react": "^16.13.1",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.13.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
@@ -91,8 +91,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx-source": "^7.8.3",
-    "astroturf": "^0.10.2",
+    "@babel/plugin-transform-react-jsx-source": "^7.10.4",
+    "astroturf": "^0.10.4",
     "tsconfig-paths-webpack-plugin": "^3.2.0"
   },
   "jest": {
