--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,5 @@
 {
   "files.exclude": {
-    "**/.git": false,
-    "**/.svn": false,
-    "**/.hg": false,
-    "**/CVS": false,
-    "**/.DS_Store": false,
-    "**/.*": false,
-    "**/node_modules": false,
-    "**/config": false,
-    "**/scripts": false,
-    "**/*.lock": false,
-    "**/tsconfig.json": false
-  },
-  "explorerExclude.backup": {
     "**/.git": true,
     "**/.svn": true,
     "**/.hg": true,
@@ -25,5 +12,6 @@
     "**/*.lock": true,
     "**/tsconfig.json": true
   },
+  "explorerExclude.backup": null,
   "deno.enable": false
 }
