--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@babel/core": "7.4.3",
     "@reach/router": "^1.3.4",
     "@svgr/webpack": "4.1.0",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
     "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.41",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.9",
     "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
@@ -22,6 +24,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "classnames": "^2.2.6",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
@@ -55,6 +58,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
