--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "monaco-editor-webpack-plugin": "^1.9.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-monaco": "^1.2.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
